<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AudioSenderActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onButtonClicked"
            android:textOff="@string/off"
            android:textOn="@string/on" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onStartButtonClicked"
            android:textOff="@string/pause"
            android:textOn="@string/play" />

    </LinearLayout>

    <com.thinktube.android.view.LoggerScrollView
        android:id="@+id/scroller"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>